force-app/main/default/objects/Credencial__c/Credencial__c.object-meta.xml
<CustomObject>
    <label>Credential</label>
    <nameField>
        <label>Credencial Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>