force-app/main/default/objects/Credencial__c/fields/Answer_VF__c.field-meta.xml
<CustomField>
    <fullName>Answer_VF__c</fullName>
    <label>Answer VF</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>