force-app/main/default/objects/Credencial__c/fields/Answers_ID__c.field-meta.xml
<CustomField>
    <fullName>Answers_ID__c</fullName>
    <displayFormat>AID-{0000}</displayFormat>
    <label>Answers ID</label>
    <type>AutoNumber</type>
</CustomField>