force-app/main/default/objects/Credencial__c/fields/Assign_By_Individual__c.field-meta.xml
<CustomField>
    <fullName>Assign_By_Individual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assign By Individual</label>
    <type>Checkbox</type>
</CustomField>