force-app/main/default/objects/Credencial__c/fields/Copy_to_client__c.field-meta.xml
<CustomField>
    <fullName>Copy_to_client__c</fullName>
    <label>Copy to client</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>