force-app/main/default/objects/Credencial__c/fields/Credential_Master_ID__c.field-meta.xml
<CustomField>
    <fullName>Credential_Master_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credential Master ID</label>
    <referenceTo>Credential_Master__c</referenceTo>
    <relationshipLabel>Credentials</relationshipLabel>
    <relationshipName>Credentials</relationshipName>
    <type>Lookup</type>
</CustomField>