force-app/main/default/objects/Credencial__c/fields/Credential_Pack__c.field-meta.xml
<CustomField>
    <fullName>Credential_Pack__c</fullName>
    <label>Credential Pack</label>
    <length>255</length>
    <type>Text</type>
</CustomField>