force-app/main/default/objects/Credencial__c/fields/Credential_Status__c.field-meta.xml
<CustomField>
    <fullName>Credential_Status__c</fullName>
    <label>Credential Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>