force-app/main/default/objects/Credencial__c/fields/DEA_Business_Activity__c.field-meta.xml
<CustomField>
    <fullName>DEA_Business_Activity__c</fullName>
    <label>DEA Business Activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>