force-app/main/default/objects/Credencial__c/fields/DEA_FEE_Status__c.field-meta.xml
<CustomField>
    <fullName>DEA_FEE_Status__c</fullName>
    <label>DEA FEE Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>