force-app/main/default/objects/Credencial__c/fields/DEA_Schedule__c.field-meta.xml
<CustomField>
    <fullName>DEA_Schedule__c</fullName>
    <label>DEA Schedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>