force-app/main/default/objects/Credencial__c/fields/Docusign_Envelop_Id__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Envelop_Id__c</fullName>
    <label>Docusign Envelop Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>