force-app/main/default/objects/Credencial__c/fields/Dont_display_in_portal__c.field-meta.xml
<CustomField>
    <fullName>Dont_display_in_portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dont display in portal</label>
    <type>Checkbox</type>
</CustomField>