force-app/main/default/objects/Credencial__c/fields/Inactivate_Credential__c.field-meta.xml
<CustomField>
    <fullName>Inactivate_Credential__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inactivate Credential</label>
    <type>Checkbox</type>
</CustomField>