force-app/main/default/objects/Credencial__c/fields/Inactivate_Reason__c.field-meta.xml
<CustomField>
    <fullName>Inactivate_Reason__c</fullName>
    <label>Inactivate Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>