force-app/main/default/objects/Credencial__c/fields/Is_Answered__c.field-meta.xml
<CustomField>
    <fullName>Is_Answered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Answered</label>
    <type>Checkbox</type>
</CustomField>