force-app/main/default/objects/Credencial__c/fields/Issuing_Agency__c.field-meta.xml
<CustomField>
    <fullName>Issuing_Agency__c</fullName>
    <label>Issuing Agency</label>
    <length>100</length>
    <type>Text</type>
</CustomField>