force-app/main/default/objects/Credencial__c/fields/Re_Verification_Basis_Internal__c.field-meta.xml
<CustomField>
    <fullName>Re_Verification_Basis_Internal__c</fullName>
    <label>Re-Verification Basis (Internal)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TEST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>