force-app/main/default/objects/Credencial__c/fields/Re_Verification_Frequency_Internal__c.field-meta.xml
<CustomField>
    <fullName>Re_Verification_Frequency_Internal__c</fullName>
    <label>Re-Verification Frequency (Internal)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>