force-app/main/default/objects/Credencial__c/fields/Reactivate_Credential__c.field-meta.xml
<CustomField>
    <fullName>Reactivate_Credential__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reactivate Credential</label>
    <type>Checkbox</type>
</CustomField>