force-app/main/default/objects/Credencial__c/fields/Reactivate_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reactivate_Reason__c</fullName>
    <label>Reactivate Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TEST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>