force-app/main/default/objects/Credencial__c/fields/Required_Action__c.field-meta.xml
<CustomField>
    <fullName>Required_Action__c</fullName>
    <label>Required Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TEST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>