force-app/main/default/objects/Credencial__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <type>TextArea</type>
</CustomField>