force-app/main/default/objects/Credencial__c/fields/Result_Score__c.field-meta.xml
<CustomField>
    <fullName>Result_Score__c</fullName>
    <label>Result Score</label>
    <length>100</length>
    <type>Text</type>
</CustomField>