force-app/main/default/objects/Credencial__c/fields/Review_Result__c.field-meta.xml
<CustomField>
    <fullName>Review_Result__c</fullName>
    <label>Review Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>