force-app/main/default/objects/Credencial__c/fields/Universal_Credential_Name_Verified__c.field-meta.xml
<CustomField>
    <fullName>Universal_Credential_Name_Verified__c</fullName>
    <label>Universal Credential Name Verified</label>
    <length>100</length>
    <type>Text</type>
</CustomField>