force-app/main/default/objects/Credencial__c/fields/Universal_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Universal_Item_Number__c</fullName>
    <label>Universal Item Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>