force-app/main/default/objects/Credencial__c/fields/Universal_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Universal_Order_Number__c</fullName>
    <label>Universal Order Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>