force-app/main/default/objects/Credencial__c/fields/Universal_Status__c.field-meta.xml
<CustomField>
    <fullName>Universal_Status__c</fullName>
    <label>Universal Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>